[tool.poetry]
name = "dkpackage"
version = "0.1.0"
description = ""
authors = ["NMC-DAVE <daikan1998@163.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"
myst-nb = {version = "^0.14.0", python = "^3.9"}
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
